terminado el tutorial de rutas

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,2 +1,3 @@
+<% provide(:title, "Página Principal") %>
+
 <h1>El Buen Gusto te da la bienvenida</h1>
-<p>Find me in app/views/static/home.html.erb</p>
