--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,15 @@
 </head>
 <body>
 	<%= render 'layouts/header' %>
+
+	<% flash.each do |key, value| %>
+	<div class="primary badge alert-<%= key %>"><%= value %></div>
+	<% end %>
+
 	<div class="container">
 		<%= yield %>
 	</div>
 	<%= render 'layouts/footer' %>
+	<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
