Agregada la gema de gumby rails para utilizar el framework Grumby

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,12 @@
-<footer class="footer">
-	<small>
-		<a href="http:www//luispedraza.es/">Desarrollo: Luis Pedraza</a>
-	</small>
-	<nav>
-		<ul>
-			<li><%= link_to "Acerca de",   '#' %></li>
-			<li><%= link_to "Contacto", '#' %></li>
+<div class="wrapper">
+	<footer class="row">
+		<div class="six columns">
+			El Buen Gusto es un desarrollo de <a href="http://www.luispedraza.es">Luis Pedraza</a>
+		</div>
+		<div class="eight columns">
+		<ul class="socbtns">
+			<li class="btn facebook"><a href="https://www.facebook.com/pages/Pastelería-El-Buen-Gusto/173186872703628">Facebook</a></li>
 		</ul>
-	</nav>
-</footer>
+		</div>
+	</footer>
+</div>
