--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
 	<%= link_to "El Buen Gusto", '#', id: "logo" %>
-	<nav>
+	<nav class="navbar pretty">
 		<ul class="nav pull-right">
 			<li><%= link_to "Inicio", root_path %></li>
 			<li><%= link_to "Ayuda", ayuda_path %></li>
