--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Listado de todos los usuarios</h1>
+<% provide(:title, "Todos los usuarios") %>
+<h1><%= yield :title %></h1>
+
+<ul class="users">
+	<% @users.each do |user| %>
+	<li>
+		<%= link_to user.name, user %>
+		<% if current_user.admin? && !current_user?(user) %>
+		<%= link_to "Borrar", user, method: :delete, data: {confirm: "¿Estás seguro?"} %>
+		<% end %>
+	</li>
+	<% end %>
+</ul>
