Tereminada primera versión de notificaciones

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,5 @@
-<div class="wrapper">
+<div class="wrapper shaded">
 	<footer class="row">
-		<div class="six columns">
-			El Buen Gusto es un desarrollo de <a href="http://www.luispedraza.es">Luis Pedraza</a>
-		</div>
 		<div class="eight columns">
 		<ul class="socbtns">
 			<li class="btn facebook"><a href="https://www.facebook.com/pages/Pastelería-El-Buen-Gusto/173186872703628">Facebook</a></li>
