--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
 <% provide(:title, @user.name) %>
 <h1><%= @user.name %></h1>
+
+<%= render 'shared/notification_form' %>
+
+
+<% if @user.notifications.any? %>
+<div id="notifications">
+	<h3>Notificaciones (<%= @user.notifications.count %>)</h3>
+	<ol class="notifications">
+		<%= render @notifications %>
+	</ol>
+</div>
+<% end %>
