--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,31 @@
 	<%= render 'layouts/shim' %>
 </head>
 <body>
-	<%= render 'layouts/header' %>
+	<div class="wrapper">
+		<%= render 'layouts/header' %>
 
-	<% flash.each do |key, value| %>
-	<div class="primary badge alert-<%= key %>"><%= value %></div>
-	<% end %>
+		<div class="wrapper">
+			<div class="row">
+				<% flash.each do |key, value| %>
+				<div class="primary badge alert-<%= key %>"><%= value %></div>
+				<% end %>
+			</div>
+		</div>
 
-	<div class="container">
-		<%= yield %>
-	</div>
-	<%= render 'layouts/footer' %>
-	<%= debug(params) if Rails.env.development? %>
+
+		<div class="wrapper">
+			<div class="row">
+				<%= yield %>
+			</div>
+		</div>
+
+		<%= render 'layouts/footer' %>
+
+		<% if Rails.env.development? %>
+			<div class="row">
+			<%= debug(params) %>
+			</div>
+		<% end %>
+	</div><!-- wrapper -->
 </body>
 </html>
