--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,11 @@
-<% if @user.errors.any? %>
+<%= debug(object) %>
+<% if object.errors.any? %>
 <div id="error_info">
 	<div class="default badge">
-		The form contains <%= pluralize(@user.errors.count, "error") %>.
+		El formulario contiene <%= pluralize(object.errors.count, "error") %>.
 	</div>
 	<ul>
-		<% @user.errors.full_messages.each do |msg| %>
+		<% object.errors.full_messages.each do |msg| %>
 		<li class="danger alert">* <%= msg %></li>
 		<% end %>
 	</ul>
