--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,13 @@
 <p id="notice"><%= notice %></p>
 
+<h2>Tu carro de la compra</h2>
+
+<ul>
+	<% @cart.cart_items.each do |item| %>
+	<li><%= item.product.name %></li>
+	<% end %>
+</ul>
+<!--
 <%= link_to 'Edit', edit_cart_path(@cart) %> |
 <%= link_to 'Back', carts_path %>
+-->
