Mejora del carro de compra y errores de 404 en controlador de carrito

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,7 +4,7 @@
 
 <ul>
 	<% @cart.cart_items.each do |item| %>
-	<li><%= item.product.name %></li>
+	<li><%= item.product.name %> (<%= item.quantity %> unidades) </li>
 	<% end %>
 </ul>
 <!--
