--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,29 @@
 <header>
-	<%= link_to "El Buen Gusto", '#', id: "logo" %>
-	<nav class="navbar pretty">
-		<ul>
-			<li><%= link_to "Inicio", root_path %></li>
+	<nav class="top-bar">
+		<ul class="title-area">
+			<li class="name"><h1><%= link_to "El Buen Gusto", root_path %></h1></li>
+			<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+		</ul>
+		<section class="top-bar-section">
+			<ul class="right">
+			<li class="divider"></li>
 			<li><%= link_to "Ayuda", ayuda_path %></li>
 			<% if signed_in? %>
-				<li><%= link_to "Users", '#' %></li>
-				<li class="dropdown">
-					<a href="#">Mi Cuenta</a>
-					<div class="dropdown">
-					<ul>
-						<li><%= link_to "Perfil", current_user %></li>
-						<li><%= link_to "Ajustes", edit_user_path(current_user) %></li>
-						<li><%= link_to "Salir", salir_path, method: "delete" %></li>
-					</ul>
-					</div>
-				</li>
+			<li class="divider"></li>
+			<li><%= link_to "Usuarios", users_url %></li>
+			<li class="has-dropdown"><a href="#">Mi Cuenta</a>
+				<ul class="dropdown">
+					<li><%= link_to "Perfil", current_user %></li>
+					<li><%= link_to "Ajustes", edit_user_path(current_user) %></li>
+					<li><%= link_to "Salir", salir_path, method: "delete" %></li>
+				</ul>
+			</li>
+			</li>
 			<% else %>
-				<li><%= link_to "Entrar", entrar_path %></li>
+			<li class="divider"></li>
+			<li><%= link_to "Entrar", entrar_path %></li>
 			<% end %>
-		</ul>
+			</ul>
+		</section>
 	</nav>
 </header>
