--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,33 +1,43 @@
-<%= form_for(@product) do |f| %>
-  <% if @product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+<%= form_for @product, :html => {:multipart => true} do |f| %>
+<% if @product.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-      <ul>
-      <% @product.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <ul>
+    <% @product.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description, rows: 5 %>
-  </div>
-  <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<div class="field">
+  <%= f.label :name %><br>
+  <%= f.text_field :name %>
+</div>
+<div class="field">
+  <%= f.label :description %><br>
+  <%= f.text_area :description, rows: 5 %>
+</div>
+<div class="field">
+  <%= f.label :image_url %><br>
+  <%= f.text_field :image_url %>
+</div>
+<div class="field">
+  <%= f.label :price %><br>
+  <%= f.text_field :price %>
+</div>
+
+<%= f.fields_for :product_images do |builder| %>
+<% if builder.object.new_record? %>
+<%= builder.label :caption, "Descripción de Imagen" %>
+<%= builder.text_field :caption %>
+<%= builder.label :photo, "Archivo de Imagen" %>
+<%= builder.file_field :photo %>
+<% end %>
+<% end %>
+
+<div class="actions">
+  <%= f.submit %>
+</div>
 <% end %>
