Mejoras en editor de producto con varias imágenes

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing product</h1>
+<h1>Edición de producto</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @product %> |
+<%= link_to 'Ver', @product %> |
 <%= link_to 'Cancelar', products_path %>
