--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,24 +1,33 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @product.name %>
+	<strong>Name:</strong>
+	<%= @product.name %>
 </p>
 
 <p>
-  <strong>Description:</strong>
-  <%= @product.description %>
+	<strong>Description:</strong>
+	<%= @product.description %>
 </p>
 
 <p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
+	<strong>Image url:</strong>
+	<%= @product.image_url %>
 </p>
 
 <p>
-  <strong>Price:</strong>
-  <%= @product.price %>
+	<strong>Price:</strong>
+	<%= @product.price %>
 </p>
+
+<div class="row">
+	<% @product.product_images.each do |photo| %>
+	<div class="row">
+		<%= image_tag photo.photo.url(:large) %>
+		<%= image_tag photo.photo.url(:small) %>
+	</div>
+	<% end %>
+</div>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
