--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,43 +1,68 @@
-<%= form_for @product, :html => {:multipart => true} do |f| %>
-<% if @product.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+<div class="row">
+  <!-- Columna izquierda -->
+  <div class="small-1 large-8 columns">
+    <div class="row" id="product-fields">
+      <h3>Información de producto</h3>
+      <%= form_for @product, :html => {:multipart => true} do |f| %>
+      <% if @product.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-  <ul>
-    <% @product.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+        <ul>
+          <% @product.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+      <% end %>
 
-<div class="field">
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
-</div>
-<div class="field">
-  <%= f.label :description %><br>
-  <%= f.text_area :description, rows: 5 %>
-</div>
-<div class="field">
-  <%= f.label :image_url %><br>
-  <%= f.text_field :image_url %>
-</div>
-<div class="field">
-  <%= f.label :price %><br>
-  <%= f.text_field :price %>
-</div>
+      <div class="field">
+        <%= f.label :name, "Nombre" %><br>
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :description, "Descripción" %><br>
+        <%= f.text_area :description, rows: 5 %>
+      </div>
+      <div class="field">
+        <%= f.label :image_url %><br>
+        <%= f.text_field :image_url %>
+      </div>
+      <div class="field">
+        <%= f.label :price %><br>
+        <%= f.text_field :price %>
+      </div>
+    </div>
 
-<%= f.fields_for :product_images do |builder| %>
-<% if builder.object.new_record? %>
-<%= builder.label :caption, "Descripción de Imagen" %>
-<%= builder.text_field :caption %>
-<%= builder.label :photo, "Archivo de Imagen" %>
-<%= builder.file_field :photo %>
-<% end %>
-<% end %>
+    <div class="row" id="product-images">
+      <h3>Imágenes del producto</h3>
+      <%= f.fields_for :product_images do |builder| %>
+      <%= render 'product_image_fields', f: builder %>
+      <% end %>
 
-<div class="actions">
-  <%= f.submit %>
+      <%= link_to_add_fields "Agregar Imagen", f, :product_images %>
+    </div><!-- #images -->
+  </div>
+
+  <!-- Columna derecha -->
+  <div class="small-1 large-4 columns">
+    <div class="row" id="product-categories">
+      <h3>Categorías</h3>
+      <p>Listado de categorías</p>
+    </div>
+    <div class="row" id="product-tags">
+      <h3>Etiquetas</h3>
+      <p>Selección de etiquetas</p>
+    </div>
+    <div class="row" id="product-seo">
+      <h3>SEO</h3>
+      <p>Opciones de SEO</p>
+    </div>
+  </div>
+
+  <div class="row" id="actions">
+    <%= f.submit "Aceptar", class: "button" %>
+  </div>
+  <% end %>
+
 </div>
-<% end %>
