--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -35,4 +35,4 @@
 
 <br>
 
-<%= link_to 'Nuevo Producto', new_product_path %>
+<%= link_to 'Nuevo Producto', new_product_path, class: "button radius" %>
