mejora de etiquetas para checkbox de categorías

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -50,8 +50,8 @@
         <p>Listado de categorías</p>
         <% for category in Category.all %>
         <div class="row">
-          <%= check_box_tag "product[category_ids][]", category.id, @product.categories.include?(category) %>
-          <%= category.name %>
+          <%= check_box_tag "product[category_ids][]", category.id, @product.categories.include?(category), id: "category_#{category.id}" %>
+          <%= label_tag "category_#{category.id}", category.name %>
         </div>
         <% end %>
       </div>
