--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,5 +10,9 @@
   <%= @category.description %>
 </p>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<p>
+	<%= image_tag @category.photo.url %>
+</p>
+
+<%= link_to 'Editar', edit_category_path(@category), class: "button" %>
+<%= link_to 'Volver', categories_path, class: "button" %>
