--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,18 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<h2>Tu carro de la compra</h2>
-
-
-<table id="cart">
-	<%= render @cart.cart_items %>
-	<tr class="total"><td></td><td>Total:</td><td><%= number_to_currency(@cart.total_price) %></td></tr>
-</table>
-
-
-<%= button_to 'Vaciar el carrito',  @cart,  method: :delete, confirm: '¿Confirmas que quieres vaciar el carrito?', class: "button" %>
-<%= link_to 'Seguir comprando', store_url, class: "button" %>
-
-<!--
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
--->
+<%= render @cart %>
