--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -3,7 +3,7 @@
 <h2>Tu carro de la compra</h2>
 
 
-<table id="cart">
+<table class="cart">
 	<%= render cart.cart_items %>
 	<tr class="total"><td></td><td>Total:</td><td><%= number_to_currency(cart.total_price) %></td></tr>
 </table>
