--- a/app/views/cart_items/_cart_item.erb
+++ b/app/views/cart_items/_cart_item.erb
@@ -1,3 +1,3 @@
-<tr>
+<tr <% if cart_item == @last_item %> id="last_item"<% end %> >
 <td><%= cart_item.quantity %></td><td><%= cart_item.product.name %></td><td><%= number_to_currency(cart_item.total_price) %></td>
 </tr>
