tablas de pedidos y columna de pedido en tabla de elementos de carrito, y primera veerificación de carrito no vacío al realizar un nuevo pedido en orders_controller#new

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -10,4 +10,4 @@
 
 
 <%= button_to 'Vaciar el carrito',  cart,  method: :delete, confirm: '¿Confirmas que quieres vaciar el carrito?', class: "button" %>
-<%= link_to 'Seguir comprando', store_url, class: "button" %>
+<%= button_to 'Realizar el pedido',  new_order_path,  method: :get, class: "button" %>
