Creado el procesamiento de nuevos pedidos

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -11,23 +11,23 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="row">
+    <div class="large-2 columns"><%= f.label :name, "Nombre", class: "right" %><br></div>
+    <div class="large-10 columns"><%= f.text_field :name %></div>
   </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_area :address %>
+  <div class="row">
+    <div class="large-2 columns"><%= f.label :address, "Dirección", class: "right" %><br></div>
+    <div class="large-10 columns"><%= f.text_area :address %></div>
   </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+  <div class="row">
+    <div class="large-2 columns"><%= f.label :email, "E-Mail", class: "right" %><br></div>
+    <div class="large-10 columns"><%= f.email_field :email %></div>
   </div>
-  <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
+  <div class="row">
+    <div class="large-2 columns"><%= f.label :phone, "Teléfono", class: "right" %><br></div>
+    <div class="large-10 columns"><%= f.text_field :phone %></div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="row actions">
+    <%= f.submit 'Confirmar mi pedido', class: "button" %>
   </div>
 <% end %>
