--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New order</h1>
+<h1>Nuevo pedido</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', orders_path %>
+<%= link_to 'Cancelar', store_path, class: "button" %>
