--- a/app/views/order_mailer/confirmation.text.erb
+++ b/app/views/order_mailer/confirmation.text.erb
@@ -1,4 +1,5 @@
-Confirmación de pedido
+Confirmación de pedido en "El Buen Gusto"
+============================================
 
 Gracias por tu pedido a la pastelería "El Buen Gusto"
 Te informamos de que hemos recibido tu pedido, y en breve comenzaremos a prepararlo.
