--- a/app/views/order_mailer/confirmation.html.erb
+++ b/app/views/order_mailer/confirmation.html.erb
@@ -15,6 +15,6 @@
 	</table>
 
 	<p>Puedes mostrar este código en nuestra tienda para agilizar la recogida de tu pedido</p>
-	<%= image_tag "https://chart.googleapis.com/chart?cht=qr&chs=250x250&chl=http://www.elbuengusto.com" %>
+	<%= image_tag attachments['mi-pedido.png'].url %>
 </body>
 </html>
