cambiada una línea de sitio

--- a/app/views/order_mailer/confirmation.html.erb
+++ b/app/views/order_mailer/confirmation.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+	<link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates:400,700' rel='stylesheet' type='text/css'>
 	<style type="text/css">
-	@import url(http://fonts.googleapis.com/css?family=Montserrat+Alternates:400,700);
 	body {
 		font-family: 'Montserrat Alternates', sans-serif;
 	}
@@ -12,12 +12,12 @@
 	}
 	#table_main {
 		background-color: #fff;
+		vertical-align: top;
 	}
 
 	</style>
 </head>
 <body>
-
 	<table id="table_back" width="100%">  
 		<tr>  
 			<td>  
