--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, @user.name) %>
 <h1><%= @user.name %></h1>
+<%= image_tag @user.avatar.url %>
 
 <%= render 'shared/notification_form' %>
 
