--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
  <%= javascript_include_tag "vendor/custom.modernizr", "data-turbolinks-track" => true %>
  <%= csrf_meta_tags %>
  <%= render 'layouts/shim' %>
+ <%= yield :styles %>
 </head>
 
 <body>
@@ -58,5 +59,6 @@
   </div><!-- wrapper -->
   
   <%= javascript_include_tag "application", "data-turbolinks-track" => true  %>
+  <%= yield :scripts %>
 </body>
 </html>
