--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,8 @@
 <% provide(:title, @user.name) %>
 <h1><%= @user.name %></h1>
-<%= image_tag @user.avatar.url %>
+<%= image_tag @user.avatar.url :medium %>
 
 <%= render 'shared/notification_form' %>
-
 
 <% if @user.notifications.any? %>
 <div id="notifications">
