--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-	<strong>Name:</strong>
+	<strong>Nombre</strong>
 	<%= @product.name %>
 </p>
 
 <p>
-	<strong>Description:</strong>
+	<strong>Descripción</strong>
 	<%= @product.description %>
 </p>
 
 <p>
-	<strong>Price:</strong>
+	<strong>Precio</strong>
 	<%= @product.price %>
 </p>
 
