--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -9,6 +9,6 @@
 	<h3> <%= p.name %> </h3>
 	<%= sanitize p.description %>
 	<div class="price"> <%= number_to_currency p.price, unit: '€' %> </div>
-	<%= button_to 'Añadir al carro', cart_items_path(product_id: p), remote: true %>
+	<%= button_to 'Añadir al carro', cart_items_path(product_id: p.id), remote: true %>
 </div>
 <% end %>
