Terminado producto destacable

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -31,6 +31,10 @@
           <%= f.label :price %><br>
           <%= f.text_field :price %>
         </div>
+        <div class="field">
+          <%= f.label :to_front, "Destacar en Portada" %><br>
+          <%= f.check_box :to_front %><br>
+        </div>
       </div>
 
       <div class="row" id="product-images">
