--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.store_item {
+	height: 300px;
+ 	border: 1px solid #ccc;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+    border-radius: 3px 3px;
+    margin: 0 auto 10px;
+}
+
+.store_item_buy {
+	width: 100px;
+	float: right;
+
+}
