Agregado enlace a detalle de producto en la tienda

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -17,6 +17,7 @@
 			
 			<%= sanitize p.description %>
 			<div class="price"> <%= number_to_currency p.price, unit: '€' %> </div>
+			<%= link_to "Ver más", p %>
 		</div>
 
 		<div class="store_item_buy">
